# MorningBrief

./: .env.example  .gitignore  CHANGELOG.md  DISCLAIMER.md  LICENSE  README.md  pyproject.toml
MorningBriefDataDemo/: README.md  history.csv  prompt.md
MorningBriefDataDemo/reports/daily/: demo.md
MorningBriefDataDemo/seed/: memory.md
MorningBriefDataDemo/vault/notes/: AgentPatterns.md  EvaluationPlan.md  RetrievalSystems.md  ReusableSystems.md
MorningBriefDataDemo/vault/operations/: PublicDemoRoadmap.md  ResourceReview.md
MorningBriefDataDemo/vault/organization/: BriefingTemplate.md  Principles.md
MorningBriefDataDemo/vault/projects/: KnowledgeOperations.md  ResearchDigest.md
MorningBriefDataDemo/vault/updates/: CurrentFocus.md  WorkshopCapture.md
src/morningbrief/: __init__.py  cli.py  config.py  demo.py  doctor.py  history.py  output.py  reports.py  rollout.py  runner.py  sessions.py  state.py  workflow.py
src/morningbrief/serve/: __init__.py  app.py
tests/: test_cli.py  test_config.py  test_demo.py  test_history.py  test_output.py  test_reader.py  test_reports_state.py  test_runner.py  test_sessions.py  test_version.py  test_workflow.py
