[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "morningbrief"
version = "2.0.0"
description = "CLI wrapper around a local Codex Morning Brief workflow"
authors = [
    { name = "William Peidong Gao", email = "william@williampeidonggao.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
dependencies = ["streamlit>=1.37"]

[project.urls]
Homepage = "https://williampeidonggao.com/resources/MorningBrief/"

[project.scripts]
mb = "morningbrief.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
